--- a/pizza/templates/base.html
+++ b/pizza/templates/base.html
@@ -14,20 +14,13 @@
 ​
     {% block styles %}
         {% bootstrap_css%}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{% static 'css/sb-admin-2.css'%}">
-        <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-​             <!-- Custom fonts for this template-->
-        <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-        <!-- Custom styles for this template-->
-        <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
-                <!-- Custom styles for this template-->
-                <link href="{% static  'js/sb-admin-2.min.css' %}" rel="stylesheet">
-                <link href="{% static  'js/sb-admin-2.js' %}" rel="stylesheet">
-                <link href="{% static  'css/sb-admin-2.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+        <link rel="stylesheet" href="{% static 'css/styles.css'%}">
+        <link href="{% static  'js/bootstrap.min.js' %}" rel="stylesheet">
+        <link href="{% static  'js/index.js' %}" rel="stylesheet">
+        <link href="{% static  'js/jquery3.4.1.js' %}" rel="stylesheet">
+        <link href="{% static  'js/popper.min.js' %}" rel="stylesheet">
 ​
     {% endblock styles %}
 </head>
@@ -46,23 +39,15 @@
     {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src=" {% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js ' %}"></script>
     ​       
     <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
+    
     <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    
+    <!-- Custom scripts for all pages-->
+    
+    <!-- Custom scripts for all pages-->
 
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
-    <!-- Core plugin JavaScript-->
-    <script src=" {% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
-​
-    <!-- Custom scripts for all pages-->
-    <script src=" {% static 'js/sb-admin-2.min.js' %}"></script>
     {% bootstrap_javascript%}
     <!-- <script src="{% static 'js/tatuadmin.js'%}"></script> -->
 ​
