--- a/pizza/templates/base.html
+++ b/pizza/templates/base.html
@@ -21,6 +21,8 @@
         <link href="{% static  'js/index.js' %}" rel="stylesheet">
         <link href="{% static  'js/jquery3.4.1.js' %}" rel="stylesheet">
         <link href="{% static  'js/popper.min.js' %}" rel="stylesheet">
+        <link rel="icon" href= "{%static 'images/favicon.ico' %}" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico|Oswald" rel="stylesheet">
 ​
     {% endblock styles %}
 </head>
