--- a/pizza/templates/index.html
+++ b/pizza/templates/index.html
@@ -1,3 +1,8 @@
+{% include 'base.html'%}
+{% block content %}
+<main>
+
+
 <div class="container-fluid">
     <div class="jumbotron">
 
@@ -133,3 +138,5 @@
     </div>
 
 </div>
+</main>
+{% endblock  %}
