markup showing well

--- a/pizza/templates/index.html
+++ b/pizza/templates/index.html
@@ -7,7 +7,7 @@
     <div class="jumbotron">
 
         <div class="page-header ">
-            <h1 class="display-1">Oregano Pizza</h1>
+            <h1 class="display-1">Janice Pizza</h1>
         </div>
 
 
