downloading button is working well

--- a/pizza/templates/base.html
+++ b/pizza/templates/base.html
@@ -60,7 +60,7 @@
         <script>
 
             console.log('redbull');
-            console.log('bruh');
+            console.log('janice bruh');
             console.log(69);
 
             $(document).ready(function () {
@@ -187,8 +187,9 @@
                 });
 
             });
-
         </script>
+            
+            
         {% endblock scripts %}
         ​
     </body>
